# pico-projects

./: CMakeLists.txt  atCOMS808.txt  blink_led.c  board_definitions.h  hw_config.c  main.c
lib/SIM8XX/: MQTT_protocol.c  MQTT_protocol.h  SIM8XX.c  SIM8XX.h
lib/ds18b20/: ds18b20.c  ds18b20.h  onewire.c  onewire.h  romsearch.c  romsearch.h
lib/sonar_i2cxl/: sonar_i2cxl.c  sonar_i2cxl.h  sonar_i2cxl_user.c  sonar_i2cxl_user.h
